# codex-widget

./: .gitignore  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.codegraph/: daemon.pid
.github/workflows/: ci.yml  release.yml
scripts/: create-latest-json.ps1
src/: main.js  styles.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  autostart.rs  commands.rs  lib.rs  logging.rs  quota.rs  settings.rs  tray.rs  window_state.rs
src-tauri/src/quota/: command.rs  mod.rs  normalize.rs  reset_credits.rs  service.rs  session.rs  types.rs
src/app/: app.js  constants.js  custom-select.js  dom-utils.js  dom.js  formatters.js  geometry.js  icons.js  quota-controller.js  render.js  settings-controller.js  settings-model.js  settings-persistence.js  startup.js  state.js  tauri-service.js  update-controller.js  update-status.js  window-controller.js
src/app/window/: ball-controller.js  position-controller.js  position-writer.js
src/components/: gauge.js
src/components/meters/: basic1-meter.js  basic2-meter.js  basic3-meter.js  default-meter.js  meter-controller.js
src/styles/: meter.css  quota.css  shell.css
src/themes/: basic1.css  basic2.css  basic3.css  default.css
tests/: formatters.test.js  geometry.test.js  position-writer.test.js  quota-controller.test.js  settings-model.test.js  settings-persistence.test.js  startup.test.js
