[package]
name = "codex-quota-widget"
version = "0.1.0"
description = "Rust 版 Codex 额度悬浮小组件。"
authors = ["fengshi"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
name = "codex_quota_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
