[package]
name = "codex-quota-widget"
version = "1.5.2"
description = "通过 Codex CLI 读取 Codex 额度的 Rust 版悬浮小组件。"
authors = ["fengshi"]
edition = "2021"
license = "MIT"
rust-version = "1.88.0"

[lib]
name = "codex_quota_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
